--- a/PP2/package.json
+++ b/PP2/package.json
@@ -17,6 +17,9 @@
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
