--- a/PP2/scriptorium/package.json
+++ b/PP2/scriptorium/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^5.21.1",
     "@prisma/studio": "^0.503.0",
     "bcrypt": "^5.1.1",
