--- a/PP2/scriptorium/package.json
+++ b/PP2/scriptorium/package.json
@@ -16,9 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "next": "15.0.1",
-    "prisma": "^5.21.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "@types/node": "^20",
