--- a/PP2/scriptorium/package.json
+++ b/PP2/scriptorium/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,8 +15,7 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
-    "next": "15.0.1",
-    "prisma": "^5.21.1"
+    "next": "15.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +23,7 @@
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
     "postcss": "^8",
+    "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
